tests/ui/rust-2024/reserved-guarded-strings.stderr
error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:42:12
   |
LL |     demo2!(## "foo");
   |            ^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:44:12
   |
LL |     demo2!(### "foo");
   |            ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:45:12
   |
LL |     demo3!(## "foo"#);
   |            ^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:46:12
   |
LL |     demo3!(### "foo"###);
   |            ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:46:21
   |
LL |     demo3!(### "foo"###);
   |                     ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:50:17
   |
LL |     demo2!("foo"###);
   |                 ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:53:12
   |
LL |     demo2!(blah"xx");
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah "xx");
   |                +

error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:54:12
   |
LL |     demo2!(blah#"xx"#);
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah #"xx"#);
   |                +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:57:12
   |
LL |     demo1!(#"");
   |            ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:59:12
   |
LL |     demo1!(####"");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:60:12
   |
LL |     demo1!(#"foo");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:61:12
   |
LL |     demo1!(###"foo");
   |            ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:63:12
   |
LL |     demo1!(###"foo"#);
   |            ^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:64:12
   |
LL |     demo1!(###"foo"##);
   |            ^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:68:12
   |
LL | ...n!(####################################################################################################################################################################################################################################################################"foo...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024

error: aborting due to 15 previous errors

